lots of copy-paste additions from working drafts added to chapter 1, edits and refs to follow

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,6 +1,6 @@
 \chapter{Ideologies and Their Stakes}
 
-Ideologies (and their stakes) (32 p)
+Ideologies (and their stakes) (visions/histories) (32 p)
 
 \subsection{Automation of Work}
 %% 1.1) deep history is the mechanization/automation of work (4 p)
@@ -589,16 +589,55 @@ networks,\footnote{These systems still have little or nothing to do
 nodes, and more data to train with, have been able to eclipse many of
 the previous techniques\cite{???}.
 
+
+
+
+
+%%   $$$$$$$$      NOTE      $$$$$$$$$
+%%
+%%
+%%
+%%      More HISTORY, Less CRITIQUE
+%%                (here)
+%%
+%%
+
+
+
+
 %% ``self-aware'' mario, image recognition and other
-%% claptrap (1) (incl. John von Neumann & ALife (See CMS790 paper)
-But as we have seen before, the AI hype-machine is doing its work. And
-some of the popular claims about deep learning are simply beyond
-belief. But it is important to understand why this technique is not a
-magic bullet before one can understand the real shape and implications
-of the driverless car vision.
-
-
-In brief, this is the 
+%% claptrap (1) (incl. John von Neumann & ALife (See CMS790 paper)??)
+But as we have seen before, the AI hype-machine is again doing its
+work. And popular claims about the utopic promise of deep learning
+abound. But it is important to understand why this technique is not a
+magic bullet in order to understand the real shape and implications
+of the driverless car vision. Google's and Stanford's recent
+improvements in image recognition\cite{markoffImage} triggered a wave
+of popular speculation about computer vision meeting or surpassing
+that of humans. And yet as we will see, the sort of ``understanding''
+involved is limited, dealing only with static images and objects
+captioned by humans in the training data. The systems would not be
+able to answer other questions about the scenes that have to do with
+the material properties of the objects, or likely results of various
+actions.\cite{gomesJordan} Another recent slew of articles focuses on
+the ``self-aware'' Mario created by researchers at the University of
+T\"{u}bingen. Any pretense to worry about a ``self-aware AI . . . with
+an insatiable desire for material wealth'' that knows ``how to kill''\cite{vincentMario}
+is simply journalistic excess\footnote{As the
+  researchers well know. This case is just a convenient example of how
+such stories spiral out from the lab and acquire new meanings.}, and suggest
+significantly more care must be taken in the use of such terms. Mario
+is programmed with emotional states like a word-processing program is
+programmed with different modes or display parameters. These states
+are simply caricatures of emotions, and that plus the program's
+natural-language interface makes it appear more eerily sci-fi than it
+actually is. But this is the environment that automous cars, as a
+research area of artificial intelligence, find themselves in today:
+part of a new surge (bubble?) of interest in the field, driven by new
+or newly extended techniques. But the ideologies related to artificial
+intelligence are not the only ones implicated in self-driving car
+research, as these vehicles are not merely programs but mobile robots
+involved in gathering, mapping, seeing, ``knowing,'' and keeping-safe.
 
 
 %% 2.1) data gathering and mapping
@@ -606,12 +645,274 @@ In brief, this is the
 %% and opens the way to more information about the passengers (2 p)
 %% --see Google's patents in particular which talk about sensing things
 %% like the number of passengers (4 p)
->>pull from my paper
+\subsection{Data Gathering and Monitoring} 
+
+%%   $$$$$$$$      NOTE      $$$$$$$$$
+%%
+%%
+%%
+%%      More HISTORY, Less CRITIQUE
+%%                (here)
+%%
+%%
+%% ``this assumes xyz'' rather than ``but really abc''
 
 
+Autonomous vehicles are and will continue to be networked
+technologies. This connectedness brings with it great possibilities
+for coordinating traffic and improving city planning, as well as great
+risks to privacy and security, whether devices are networked with each
+other or simply connected to central servers. 
+
+With what networks, and for what reasons, will autonomous vehicles be
+connected? The term autonomous night suggest that these vehicles will
+operate without network connections, but vehicle autonomy is meant as
+non-reliance on human input, rather than as a description of the
+vehicle's disconnection from other information systems. While certain
+guidance systems have been highly autonomous in the informational
+sense—inertial guidance systems for intercontinental ballistic
+missiles come to mind in particular,\cite{mackenzie} and Google's vehicles themselves
+use inertial navigation aids\cite{knightfurther}—much so-called autonomous navigation
+depends on access to global positioning satellites. Google's
+driverless car technology in particular depends on highly accurate,
+and very expensive,\footnote{An autonomous vehicle researcher at MIT
+  quoted prices in the range of $70,000 to $100,000 per device for the
+GPS alone, while noting that those would of course come down with
+greater production volume.} differential GPS technology.
+
+There is still space for significant debate about the roles of human
+beings in so called “self-driving” systems. Despite numerous news
+articles suggesting otherwise,i humans will be involved in the driving
+process, in at least some ways, for the foreseeable future. Deciding
+exactly what ways those are is a matter of both engineering practice
+and appealing to the market and its squeamishness about
+computer-controlled driving.ii But from another point of view,
+``autonomous'' vehicles, regardless of the role of the human, will be
+anything but autonomous in practice. They will be networked. GM's
+OnStar service already connects vehicles to central servers for
+purposes of safety, security, and convenience. It can automatically
+alert the authorities in case of an accident or theft, and can in
+principle be used to locate the vehicle at any time. The service also
+provides vehicle diagnostics and a connection to a tablet or
+smartphone that allows the owner to configure settings, lock and
+unlock doors, and even operate the lights and horn from any
+location.iii While these vehicles are not (yet) autonomous, OnStar's
+capabilities suggest features that will become more common in highly
+connected and computerized vehicles.
+
+Vehicles that can receive information from each other and from the
+roadway are a top priority for the NHTSA, and have been on the
+research agenda for decades.i General Motors's 1950s Firebird concept
+vehicles sold themselves on this research, despite the fact that
+Firebird II “had no automated capabilities whatsoever.”ii GM's
+promotional films suggested the vehicle could be controlled
+electronically from traffic control towers—like those in use in
+aviation—placed along major highways: the car was “under the direction
+of an 'electronic brain' on a dream highway of the future.”iii This
+would have been the realization of the New York World's Fair exhibit
+from two decades earlier: GM's Futurama from the 1939 World's Fair
+depicted cars that maintained distance from each other via a
+“sophisticated system of radio control.”iv Also in the 1950s, RCA's
+Vladimir Zworykin, a lead inventor of television technology, was
+working on an intelligent road system of his own. His concept,
+inspired by “railroad block signals,” used circuits embedded in the
+road to magnetically sense vehicle speed and location, placing sensing
+and coordination capabilities outside of the vehicle, in road-side
+systems.v Zworykin's centralized planning model would send
+instructions to individual cars, and a 1/40th scale demonstration
+system was built for the 1960 Highway Research Board meeting in
+Washington D.C.vi
+
+But there is potential to do far more with the available information,
+and data collected by the vehicle to make possible its own functioning
+could be made to serve other purposes. Information about the vehicle
+and its surroundings, including the locations of cars and pedestrians,
+precise GPS coordinates of the vehicle itself, and the vehicle's speed
+and acceleration, not only represent important knowledge for
+path-finding by the vehicle itself, but new sources of potential
+revenue for the groups in position to collect them. Uber, which
+through its GPS-enabled ride-hiring applications still collects only a
+fraction of the data that would be available through a self-driving
+vehicle, has, as already noted, agreed to share its ride data with
+cities. 
+
+Google has envisioned vehicles that can determine their number of
+occupants, and use facial-recognition or other biometric systems to
+identify them. According to the patent, these vehicles could prevent
+unauthorized persons from putting a child in a car, prevent convicted
+sex offenders from operating their vehicles within the
+legally-required distances of schools and playgrounds, or prevent a
+car's doors from being opened (even from the inside) by a child unless
+an authorized adult is present.i These are only visions, not yet
+realities, but represent a safety culture which has decided
+technological surveillance and enforcement are appropriate responses
+to the mere potential of criminal behavior. Whether or not protecting
+against these threats is an appropriate use of this information is a
+matter for societal judgment, but such proposals, if enacted, would
+require these vehicles to have unprecedented levels of very sensitive
+knowledge about people and their lives: biometrics, criminal
+histories, family and trust networks. 
+
+Data ideology tells us that we can understand ourselves better through
+data, that we can use it to determine patterns we never knew were
+there. <MORE>
+
+\subsection{Maps and Mapping}
+
+In order to drive with us, autonomous systems will have to understand,
+for at least a practical sense of “understanding,” traffic rules and
+their accompanying signs, signals, lanes, and customs. This is, at its
+core, a highly complex problem, because human understanding is built
+through years of experience. It is through existing as a human being
+in a particular cultural context that we know to drive on roads but
+not on sidewalks, and how to tell the difference. 
+
+Autonomy research seeks to create robotic systems that can function
+“on their own,” but as we have already seen these systems are very
+often connected to other information networks. The vehicles in the
+DARPA Grand Challenge did not navigate “on their own”: they used GPS
+to follow a path laid out for them in advance, using their autonomy
+only to avoid obstacles like rocks and ruts.i And though successful
+road tests have been accomplished without navigational assistance,
+using only visual stimuli (such as the EUREKA PROMETHEUS project
+previously mentioned), modern systems are tending to use more external
+stimuli, rather than less, in an attempt to increase safety. Even as
+advanced as it is, Google's autonomous vehicle technology requires
+hyper-detailed 3D maps in order to operate properly on public
+roadways.ii These maps are generated by vehicles outfitted with
+special sensor arrays, like the LIDAR Google uses for their autonomous
+vehicles, which drive a route and collect data which can be used to
+reconstruct the model.iii 
+
+Pre-made maps are used so the vehicle knows where stoplights, signs,
+and curbs are, reducing the computational load on the machine in the
+crowded visual landscape of driving, and allowing it to focus on
+elements of the environment that are changing rather than those likely
+to be static.i But Mapping requires the world to largely remain as it
+is, and claims a unique capability to represent the real, objectively
+and diagrammatically. But the required maps expose certain frailties
+in these devices: they must know about speed limits, about traffic
+lights, about rules of the road that were never designed for
+autonomous systems. These devices must be molded to us, both to our
+caprices and to our longstanding, ingrained laws and habits. They must
+include historical knowledge, rooted in the legal and social histories
+of roadways, which may differ between cities and states, and certainly
+between countries across the world.
+
+the necessary level of continual mapping is a massive task if the
+vehicles must be usable everywhere. More likely, certain areas will be
+mapped and restricted, or separate divided public rapid transit
+systems will operate on roads that can be carefully monitored.i While
+Mountain View, California may be mapped early, rural West Virginia or
+Northern Maine may not be mapped as soon or as frequently.
+Inequalities may be increased if routes frequented by upper-middle
+class professional commuters, most likely to own new autonomous cars,
+are mapped first, while roads around low-income communities are
+ignored. Local customs and behaviors differ, and even if maps are
+available, the same vehicle programming may not work for Los Angeles,
+Boston, and the rural Midwest, let alone Singapore, Mumbai or Cairo.
+The map, for all of its objective standardization, still represents
+real places subject to cultural histories and vulnerable to
+socio-economic dynamics. 
+
+
+
+\subsection{Machine Vision}
 %% 2.2) machine vision
 %% --pull from the Spectator paper (4 p)
 %% INCL. machine learning
+Interpretation of the world around us is a task that seems
+particularly easy for human beings, but particularly difficult for
+machines. The invention of the photocell, early a tool for workplace
+monitoring and surveillance, provided a simple channel through which
+electrical systems could respond to the amount of light reaching
+them.i
+Though the photocell provides the computer with access to brightness
+information over time, it falls far short of the ability of human eyes
+to perceive detail and depth, identify shapes, and interpret
+expression and motion. Emulating these characteristics represents a
+key goal of artificial intelligence research. DARPA's 1983 Strategic
+Computing Initiative included image interpretation as one of its main
+focus areas.i But it is only relatively recently that real-time video
+processing became possible for camera-based navigation on computer
+systems small enough to fit in a standard automobile.ii And machine
+vision problems, including object recognition and scene
+interpretation, continue to be difficult, even with increased
+processing power and new algorithms. 
+As an engineering discipline, computer vision takes a decidedly
+practical and reductionist view of what it means to see. The goal is
+generally not to achieve creative interpretation or aesthetic
+valuation, but to differentiate free space from things a robot should
+not run into.i But this so-called objective focus still encodes
+certain subjective judgments about objects (including people),
+behaviors, and intent. And while computer vision is having success
+with object detection, there is a wide variety of human knowledge
+about objects and scenes that is missing in current computer models.ii
+
+Though vision has not always been the sensory mode that dominated
+autonomous vehicle research—earlier research focused on radio control
+or electromagnetic tracks—vision is a particularly tempting sense to
+use, as it is integral to how humans drive. In an attempt to build
+autonomous vehicles that can operate without infrastructural changes,
+research has moved away from tracks and cables toward vision-guided
+systems. New approaches were pioneered by Ernst Dickmanns at
+University Bundswerhr in Munich, with the vision-guided VaMoRs van,
+and continued via the EUREKA PROMETHEUS project in 1987, in which
+Dickmanns and Daimler-Benz built cars guided by analog video
+cameras.iii Like the earlier VITA project by Daimler that used an
+analog video-camera signal processed through a framegrabber, these
+cars digitized analog video at relatively low resolutions. The
+features the systems searched for, including lane markings and other
+cars, are geometrically distinct and visible even in small images.iv
+
+Vision-guided systems, now using digital video cameras and
+off-the-shelf consumer hardware, have the benefit of being inexpensive
+and insensitive to interference from other nearly devices (unlike
+sonar, for example, which becomes problematic in crowded situationsi).
+Some commercial systems, such as that developed for Mercedes-Benz's
+self-driving S-class, which is slowly finding its way into consumer
+vehicles, are primarily guided based on such visual sensors.ii To
+these sensors, recent research has added roof-mounted LIDAR arrays.
+LIDAR, short for Light Detection and Ranging, is effectively a depth
+sensor, which is applied in vehicles to scan the environment with a
+rotating array of laser beams to create a detailed 360-degree
+representation of objects and their distances.iii This technology
+solves some of the difficulties of image interpretation by default, as
+it can provide highly-sensitive information about free space and
+obstacles. Shape-detection algorithms can then be used (in addition to
+vision-based data) to classify obstacles as different types of
+objects.iv 
+
+Pedestrian detection algorithms search for person-like shapes, where
+“person-like” is determined by, for example, processing thousands of
+images previously classified (by people) as being images of humans, so
+the system can learn the features that correlate with a person being
+in a particular region of an image.
+
+These sensors and techniques impact how we are known by machine-vision
+systems. Based on the views of these sensors, objects in the
+environment are placed into categories by the vehicle's computers:
+pedestrian, bicyclist, car, truck. Categories allow the system to make
+statistical predictions about likely types of behavior: according to
+one of Google's patent applications, bicyclists are likely to be more
+erratic than trucks, and should be treated accordingly.i An obstacle
+detected as a person can be expected to move, perhaps erratically,
+while an object that is considered inanimate will not.\footnote{The
+  DARPA Urban Challenge crash, the first crash between two autonomous
+  cars, provides an important lesson on the vagaries of object
+  detection: the classification threshold between moving and
+  stationary, set too high, allowed one vehicle to interpret the other
+  as stationary, leaving no room for unexpected behavior.i} 
+
+The new technologies of vehicle automation thereby produce through
+their operation new forms of evidence, which can be presented through
+electronic information media. Because autonomous cars see—putatively
+“as we see”—their sight can be leveraged as visual evidence. Computer
+vision systems that identify pedestrians can be shown to do so, via
+the detection boxes that act as diagnostic tools for researchers and
+direct representations of internal system information. 
+
+
 
 %% 2.2) what standard of safety? 
 %% --better than an average person? or better than the best people? (1 p)
@@ -639,5 +940,5 @@ In brief, this is the
 %% a normal car! (1 p)
 %% -and of course interviews with people (Ryan Chin; Walker Smith etc.
 %% where they matter to this type of vehicle)
->>pull from my paper
+>>pull from my paper? but really, this needs to be informative not critical
 
