--- a/chap2.tex
+++ b/chap2.tex
@@ -18,6 +18,22 @@ competencies (1 p)
 for testing (3 p)
 --Mapping and route issues
 ---Google car needs detailed 3D maps in order to operate (1 p)
+
+Prior knowledge of speed limits should make the car's
+behavior more reliable and predictable in all conditions, even if
+speed limit signs are missing or obscured—consider how often human
+drivers, when faced with an absence of signs, base their behaviors on
+supposition or prior knowledge. When Google's car was certified for
+testing in Nevada, Google was allowed to pre-select the route the car
+would take, so that they could build the comprehensive model the
+system requires beforehand.ii The system would likely not have been
+capable of passing a test in which the examiner could have added
+detours on the fly. And though Google claims to have driven more than
+700,000 miles with their cars, those are not 700,000 unique miles. A
+limited, thoroughly pre-mapped route has been driven many times to
+achieve those numbers.iii
+
+
 ---also rain, snow, weather (1 p)
 --Sensors issues and inability to distinguish crushed newspaper from
 rock (1 p)
@@ -25,6 +41,9 @@ rock (1 p)
 volume
 ---object identification work in machine vision is slowly progressing,
 but then we hit the above problems of VV\&T for such models (2 p)
+
+>traffic-light detection and problems of infrastructure??
+
 
 2.5??) Worth bringing in questions of terminology, ``intelligence''
 etc. and the necessary caution in ascribing them to tech; we can look
