--- a/intro.tex
+++ b/intro.tex
@@ -32,7 +32,7 @@ different social/cultural impacts (2 p)
 
 
 Note: I set out to plumb the depths of the cultural and social
-implications of self-driving vehicle technology. In my naivete, I
+implications of self-driving vehicle technology. In my na\"\ivet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
 understood and on which a meaningful ideological critique could be
 based. But as I researched, I discovered that not only did
