--- a/main.bib
+++ b/main.bib
@@ -320,6 +320,53 @@
    year = "2002",
 }
 
+@ARTICLE{markoffImage,
+   author = "John Markoff,
+   title = "{R}esearchers {A}nnounce {A}dvance in {I}mage-{R}ecognition {S}oftware",
+   journal = "New York Times",
+   month = "November 17",
+   year = 2014,
+}
+
+@ARTICLE{gomesJordan,
+   author = "Lee Gomes",
+   title = "{M}achine-{L}earning {M}aestro {M}ichael {J}ordan on the {D}elusions of {B}ig {D}ata and {O}ther {H}uge {E}ngineering {E}fforts",
+   journal = {IEEE Spectrum},
+   month = "October 20",
+   year = 2014,
+}
+
+@ARTICLE(jordanResponse,
+   author = "Michael Jordan",
+   title = "{B}ig {D}ata, {H}ype, the {M}edia and {O}ther {P}rovocative {W}ords to {P}ut in a {T}itle",
+   journal = "UC Berkeley AMPLab",
+   month = "October 22",
+   year = 2014,
+}
+
+@ARTICLE{vincentMario,
+   author = "James Vincent",
+   title = "{S}cientists are teaching {S}uper {M}ario to think and feel",
+   journal = {The Verge},
+   month = "January 19",
+   year = 2015,
+}
+
+@ARTICLE{knightFurther,
+   author = "Will Knight",
+   title = "{D}riverless {C}ars are {F}urther {A}way {T}han {Y}ou {T}hink",
+   journal = {MIT Technology Review},
+   month = "October 22",
+   year = 2013,
+}
+
+@BOOK{mackenzie,
+   author = "Donald MacKenzie",
+   title = "{I}nventing {A}ccuracy: {A} {H}istorical {S}ociology of {N}uclear {M}issile {G}uidance",
+   publisher = "Pantheon Books",
+   address = "New York",
+   year = "2002",
+}
 
 
 
