edits to data gathering and mapping subsections

--- a/chap2.tex
+++ b/chap2.tex
@@ -19,6 +19,18 @@ for testing (3 p)
 --Mapping and route issues
 ---Google car needs detailed 3D maps in order to operate (1 p)
 
+ More likely, certain areas will be
+mapped and restricted, or separate divided public rapid transit
+systems will operate on roads that can be carefully monitored.i
+
+While
+Mountain View, California may be mapped early, rural West Virginia or
+Northern Maine may not be mapped as soon or as frequently.
+Inequalities may be increased if routes frequented by upper-middle
+class professional commuters, most likely to own new autonomous cars,
+are mapped first, while roads around low-income communities are
+ignored. 
+
 Prior knowledge of speed limits should make the car's
 behavior more reliable and predictable in all conditions, even if
 speed limit signs are missing or obscured—consider how often human
