--- a/intro.tex
+++ b/intro.tex
@@ -12,6 +12,29 @@ function to drive for him on the highway (2 p)
 dimensions: this is not ONE THING or ONE IDEA (4 p)
 ---INCLUDING historical models: see Erkki Huhtamo, media archaeology
 (2 p)
+>>>>pull from my essay!
+
+General Motors's 1950s Firebird concept
+vehicles sold themselves on this research, despite the fact that
+Firebird II “had no automated capabilities whatsoever.”ii GM's
+promotional films suggested the vehicle could be controlled
+electronically from traffic control towers—like those in use in
+aviation—placed along major highways: the car was “under the direction
+of an 'electronic brain' on a dream highway of the future.”iii This
+would have been the realization of the New York World's Fair exhibit
+from two decades earlier: GM's Futurama from the 1939 World's Fair
+depicted cars that maintained distance from each other via a
+“sophisticated system of radio control.”iv Also in the 1950s, RCA's
+Vladimir Zworykin, a lead inventor of television technology, was
+working on an intelligent road system of his own. His concept,
+inspired by “railroad block signals,” used circuits embedded in the
+road to magnetically sense vehicle speed and location, placing sensing
+and coordination capabilities outside of the vehicle, in road-side
+systems.v Zworykin's centralized planning model would send
+instructions to individual cars, and a 1/40th scale demonstration
+system was built for the 1960 Highway Research Board meeting in
+Washington D.C.vi
+
 
 2) deal in general with some of the popular portrayals of the
 technology: the nature of the self-driving car as it will appear in
@@ -30,9 +53,12 @@ and that these can be traced through the histories and current
 discourses of the fields involved, and lead us to expect very
 different social/cultural impacts (2 p)
 
+Note: I need more voices from actual modern driverless car research
+papers, though looking at the Dickmanns ones more is a good idea! need
+a section specifically on how the ideologies come through!
 
 Note: I set out to plumb the depths of the cultural and social
-implications of self-driving vehicle technology. In my na\"\ivet\'{e}, I
+implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
 understood and on which a meaningful ideological critique could be
 based. But as I researched, I discovered that not only did
