--- a/main.bib
+++ b/main.bib
@@ -368,6 +368,41 @@
    year = "2002",
 }
 
+@ARTICLE{onstar,
+   key = "onstar",
+   author = "",
+   title = "{H}ome",
+   journal = {OnStar Website},
+   month = "Accessed October 19",
+   year = 2014,
+}
+
+@ARTICLE{wetmore,
+   author = "Jameson Wetmore",
+   title = "{D}riving the {D}ream: {T}he {H}istory and {M}otivations {B}ehind 60 {Y}ears of {A}utomated {H}ighway {S}ystems,
+   journal = "Automotive History Review",
+   year = 2003,
+   month = "Summer",
+   note = "Via PDF from Consortium for Science, Policy, & Outcomes at ASU",
+}
+
+@ARTICLE{uberJardin,
+   author = "Xeni Jardin",
+   title = "{I}n an effort to suck up to local governments, {U}ber plans to share your ride data",
+   journal = "Boing Boing",
+   month = "January 15",
+   year = 2015,
+}
+
+@TECHREPORT{predictPatent,
+   author = "Jiajun Zhu, David I. Ferguson, and Dmitri A. Dolgov",
+   title = "System and method for predicting behaviors of detected objects",
+   institution = "US Patent Application Publication",
+   number = "2012/0083960 A1",
+   month = "October",
+   year = 2011,
+}
+
 
 
 
