--- a/chap1.tex
+++ b/chap1.tex
@@ -346,7 +346,8 @@ sensing and acting in the manner of a
  as outcomes of systems that pass messages internally. In this way
  cybernetics is a forerunner of the discipline of
  artificial intelligence, which is interested in re-creating many of the same
- self-regulating systems within computer systems.
+ self-regulating systems within computer systems. This replacement of
+ competencies tends toward the obsolescence of the human being.
 
 %% 1950s Dartmouth Conf
 %% and subsequent winter (search Winston, Six Ages)
@@ -404,7 +405,7 @@ area, with “image understanding” and interpretation—made possible by
 the digitized image—as long range project goals. In its revised
 10-year plan, the initiative even included an autonomous land vehicle
 alongside a pilot's associate and computerized battle management
-software. But the project suffered serious management problems, and
+software. The project suffered serious management problems, and
 was eventually canceled, precipitating the general crash in AI
 funding—through which research quietly continued, waiting for another
 up-tick in public interest. But the Strategic Computing project,
@@ -416,7 +417,9 @@ important developments that were made in the service of DARPA's vision.\cite[aft
 
 Though there are a number of approaches to AI research, different
 ideas of how machine intelligence can be achieved, it is instructive
-to look specifically at three how AI paradigms envision their project. 
+to look specifically at how three AI paradigms envision their project.
+Each is an answer to the question ``how can we build systems that
+can operate without humans?''
 
 %% Classical symbol approaches (3)
 %%specifically w/ reference to ideologies
@@ -589,7 +592,38 @@ networks,\footnote{These systems still have little or nothing to do
 nodes, and more data to train with, have been able to eclipse many of
 the previous techniques\cite{???}.
 
+FIND AN NEURAL NETWORK PRIMER I CAN REFER TO\footnote{
+(perhaps Jordan, Michael I.; Bishop, Christopher M. (2004). ``Neural
+Networks''. In Allen B. Tucker. Computer Science Handbook, Second
+Edition (Section VII: Intelligent Systems). Boca Raton, FL: Chapman &
+Hall/CRC Press LLC)}
 
+Neural networks are essentially just a web of nodes with
+interconnections between them. They may consist of multiple layers
+(hence ``deep'' in deep learning) or may be shallow. Also known as
+``multilayer perceptrons,'' such networks have an input layer and
+output layer, with one or more intervening hidden layers. Each node
+corresponds to a particular feature or combination of features in the
+input, and therefore works to classify inputs into different
+categories. Each node is also connected to all the nodes in the
+following layer with some tunable weight. The process of training the
+neural network involves adjusting those connection weights so as to
+be more sensitive in distinguishing different types of
+inputs.\footnote{THIS ALL NEEDS SOME CLARITY} This tuning,
+traditionally, has been done using supervised method and
+backpropagation of errors: the output result is compared to an
+expected classification result, and the error used to tune the weights
+more appropriately. Deep learning extends this technique, decreasing
+the amount of ``feature-engineering'' (a human task, identifying the
+features the network should use to distinguish inputs) required to
+train the system. The ``ideal'' training situation is entirely
+unsupervised: the network independently ``learns'' the features of
+unlabeled and unclassified input, without any human input. This ideal
+prospers both due to convenience in terms of human effort (less
+programmer effort required to build labeled sets of training data) and
+due to the deep-seated ideology that machine independence is
+paramount. Unsupervised learning is often seen as more impressive and
+therefore more valuable research.\cite{???}
 
 
 
@@ -608,10 +642,9 @@ the previous techniques\cite{???}.
 %% ``self-aware'' mario, image recognition and other
 %% claptrap (1) (incl. John von Neumann & ALife (See CMS790 paper)??)
 But as we have seen before, the AI hype-machine is again doing its
-work. And popular claims about the utopic promise of deep learning
-abound. But it is important to understand why this technique is not a
-magic bullet in order to understand the real shape and implications
-of the driverless car vision. Google's and Stanford's recent
+work. And popular claims about the utopic promise of deep learning, to
+learn about the world ``on its own,''
+abound. Google's and Stanford's recent
 improvements in image recognition\cite{markoffImage} triggered a wave
 of popular speculation about computer vision meeting or surpassing
 that of humans. And yet as we will see, the sort of ``understanding''
@@ -619,7 +652,9 @@ involved is limited, dealing only with static images and objects
 captioned by humans in the training data. The systems would not be
 able to answer other questions about the scenes that have to do with
 the material properties of the objects, or likely results of various
-actions.\cite{gomesJordan} Another recent slew of articles focuses on
+actions.\cite{gomesJordan} It is important to understand why this technique is not a
+panacea in order to understand the real shape and implications
+of the driverless car vision. Another recent slew of articles focuses on
 the ``self-aware'' Mario created by researchers at the University of
 T\"{u}bingen. Any pretense to worry about a ``self-aware AI . . . with
 an insatiable desire for material wealth'' that knows ``how to kill''\cite{vincentMario}
@@ -665,65 +700,38 @@ risks to privacy and security, whether devices are networked with each
 other or simply connected to central servers. 
 
 With what networks, and for what reasons, will autonomous vehicles be
-connected? The term autonomous night suggest that these vehicles will
-operate without network connections, but vehicle autonomy is meant as
-non-reliance on human input, rather than as a description of the
-vehicle's disconnection from other information systems. While certain
-guidance systems have been highly autonomous in the informational
-sense—inertial guidance systems for intercontinental ballistic
-missiles come to mind in particular,\cite{mackenzie} and Google's vehicles themselves
-use inertial navigation aids\cite{knightfurther}—much so-called autonomous navigation
-depends on access to global positioning satellites. Google's
-driverless car technology in particular depends on highly accurate,
-and very expensive,\footnote{An autonomous vehicle researcher at MIT
+connected? Current driverless car concepts depend on networked
+information for vehicle guidance. While, historically, certain
+guidance systems have been insulated from communications---inertial
+guidance systems for intercontinental ballistic
+missiles are a particular example of this,\cite{mackenzie}---and
+Google's vehicles use inertial navigation devices\cite{knightfurther}
+alongside other sources of position data, current navigation systems
+depend on global positioning satellites. Google's approach to
+driverless car development currently necessitates accurate
+and expensive\footnote{An autonomous vehicle researcher at MIT
   quoted prices in the range of $70,000 to $100,000 per device for the
 GPS alone, while noting that those would of course come down with
-greater production volume.} differential GPS technology.
+greater production volume.} differential GPS receivers.
 
-There is still space for significant debate about the roles of human
-beings in so called “self-driving” systems. Despite numerous news
-articles suggesting otherwise,i humans will be involved in the driving
-process, in at least some ways, for the foreseeable future. Deciding
-exactly what ways those are is a matter of both engineering practice
-and appealing to the market and its squeamishness about
-computer-controlled driving.ii But from another point of view,
-``autonomous'' vehicles, regardless of the role of the human, will be
-anything but autonomous in practice. They will be networked. GM's
-OnStar service already connects vehicles to central servers for
-purposes of safety, security, and convenience. It can automatically
-alert the authorities in case of an accident or theft, and can in
-principle be used to locate the vehicle at any time. The service also
-provides vehicle diagnostics and a connection to a tablet or
-smartphone that allows the owner to configure settings, lock and
-unlock doors, and even operate the lights and horn from any
-location.iii While these vehicles are not (yet) autonomous, OnStar's
-capabilities suggest features that will become more common in highly
-connected and computerized vehicles.
+But a number of other developments already suggest that autonomous
+vehicles will be connected to more than just global positioning
+networks. GM's OnStar service already connects equipped vehicles to central servers for
+purposes of safety, security, and convenience. The system has the
+ability to automatically alert the authorities in case of an accident
+or theft. It also provides vehicle diagnostics to the owner's tablet
+or smartphone, and the OnStar app also allows the owner to configure settings, lock and
+unlock doors, and remotely operate the lights and horn.\cite{onstar}
+While these vehicles are not (yet) autonomous, OnStar's present
+capabilities are representative of features that will become more common in highly
+connected and computerized vehicles, including autonomous ones.
 
-Vehicles that can receive information from each other and from the
+Additionally, vehicles that can receive information from each other and from the
 roadway are a top priority for the NHTSA, and have been on the
-research agenda for decades.i General Motors's 1950s Firebird concept
-vehicles sold themselves on this research, despite the fact that
-Firebird II “had no automated capabilities whatsoever.”ii GM's
-promotional films suggested the vehicle could be controlled
-electronically from traffic control towers—like those in use in
-aviation—placed along major highways: the car was “under the direction
-of an 'electronic brain' on a dream highway of the future.”iii This
-would have been the realization of the New York World's Fair exhibit
-from two decades earlier: GM's Futurama from the 1939 World's Fair
-depicted cars that maintained distance from each other via a
-“sophisticated system of radio control.”iv Also in the 1950s, RCA's
-Vladimir Zworykin, a lead inventor of television technology, was
-working on an intelligent road system of his own. His concept,
-inspired by “railroad block signals,” used circuits embedded in the
-road to magnetically sense vehicle speed and location, placing sensing
-and coordination capabilities outside of the vehicle, in road-side
-systems.v Zworykin's centralized planning model would send
-instructions to individual cars, and a 1/40th scale demonstration
-system was built for the 1960 Highway Research Board meeting in
-Washington D.C.vi
-
-But there is potential to do far more with the available information,
+research agenda for decades.\cite[p. 11]{wetmore} These concepts would
+collect and use data to streamline traffic flow and provide
+information to reduce delays and accidents. But there is potential to
+do far more with the available information,
 and data collected by the vehicle to make possible its own functioning
 could be made to serve other purposes. Information about the vehicle
 and its surroundings, including the locations of cars and pedestrians,
@@ -733,20 +741,23 @@ path-finding by the vehicle itself, but new sources of potential
 revenue for the groups in position to collect them. Uber, which
 through its GPS-enabled ride-hiring applications still collects only a
 fraction of the data that would be available through a self-driving
-vehicle, has, as already noted, agreed to share its ride data with
-cities. 
+vehicle, has agreed to share its ride data with municipalities for purposes of
+city planning.\cite{uberJardin} Though this data is ostesibly being
+shared for the public good, it also serves private ends.
 
 Google has envisioned vehicles that can determine their number of
 occupants, and use facial-recognition or other biometric systems to
-identify them. According to the patent, these vehicles could prevent
+identify them. According to one patent,\cite{predictPatent} these vehicles could prevent
 unauthorized persons from putting a child in a car, prevent convicted
 sex offenders from operating their vehicles within the
 legally-required distances of schools and playgrounds, or prevent a
 car's doors from being opened (even from the inside) by a child unless
-an authorized adult is present.i These are only visions, not yet
-realities, but represent a safety culture which has decided
-technological surveillance and enforcement are appropriate responses
-to the mere potential of criminal behavior. Whether or not protecting
+an authorized adult is present. These are only visions, and patents
+are notorious for trying to cover as many possible angles of a
+technology even if they are not intended to be applied in practice.
+But these suggestions represent a perspective on safety and societal
+order that posits technological surveillance and enforcement as an
+appropriate preventative measure against criminal behavior. Whether or not protecting
 against these threats is an appropriate use of this information is a
 matter for societal judgment, but such proposals, if enacted, would
 require these vehicles to have unprecedented levels of very sensitive
@@ -754,66 +765,86 @@ knowledge about people and their lives: biometrics, criminal
 histories, family and trust networks. 
 
 Data ideology tells us that we can understand ourselves better through
-data, that we can use it to determine patterns we never knew were
-there. <MORE>
+these data, that we can use them to determine patterns we never knew were
+there. Out of this ideology come publications like Uber's blog, which
+describes customer ``insights'' gained through their ride data, which
+are ostensibly interesting to the public. ``Look here,'' they seem to
+say, ``we can tell you about \emph{you}.'' But it important to
+recognize that the ideologies of data collection---for corporate
+profit and public use---are deeply intertwined, and strongly
+influenced by the possibility of using machine learning techniques and
+statistical analyses to find and exploit patterns.
+
 
 \subsection{Maps and Mapping}
 
-In order to drive with us, autonomous systems will have to understand,
+Other types of data collection are also implicated in the current
+vision of the driverless car project. In order to drive with us,
+autonomous systems will have to understand,
 for at least a practical sense of “understanding,” traffic rules and
 their accompanying signs, signals, lanes, and customs. This is, at its
-core, a highly complex problem, because human understanding is built
-through years of experience. It is through existing as a human being
+core, a highly complex problem of interpretation and representation
+for machines. Human understanding is built
+through years of experience: it is through existing as a human being
 in a particular cultural context that we know to drive on roads but
-not on sidewalks, and how to tell the difference. 
+not on sidewalks, and how to tell the difference. But we do not have
+this luxury in training machines.
 
-Autonomy research seeks to create robotic systems that can function
-“on their own,” but as we have already seen these systems are very
-often connected to other information networks. The vehicles in the
+Here, the connections of autonomous systems to information networks
+again become important. The vehicles in the
 DARPA Grand Challenge did not navigate “on their own”: they used GPS
 to follow a path laid out for them in advance, using their autonomy
-only to avoid obstacles like rocks and ruts.i And though successful
+only to avoid obstacles like rocks and ruts.\footnote{John Leonard,
+  discussion with the author, December 3, 2014} And though successful
 road tests have been accomplished without navigational assistance,
 using only visual stimuli (such as the EUREKA PROMETHEUS project
-previously mentioned), modern systems are tending to use more external
+in the 1990s)\cite{???}, modern systems are tending to use more external
 stimuli, rather than less, in an attempt to increase safety. Even as
 advanced as it is, Google's autonomous vehicle technology requires
 hyper-detailed 3D maps in order to operate properly on public
-roadways.ii These maps are generated by vehicles outfitted with
+roadways.\cite{???} These maps are generated by vehicles outfitted with
 special sensor arrays, like the LIDAR Google uses for their autonomous
 vehicles, which drive a route and collect data which can be used to
-reconstruct the model.iii 
+reconstruct the model.\cite{???}
 
 Pre-made maps are used so the vehicle knows where stoplights, signs,
 and curbs are, reducing the computational load on the machine in the
 crowded visual landscape of driving, and allowing it to focus on
 elements of the environment that are changing rather than those likely
-to be static.i But Mapping requires the world to largely remain as it
-is, and claims a unique capability to represent the real, objectively
-and diagrammatically. But the required maps expose certain frailties
-in these devices: they must know about speed limits, about traffic
+to be static.\cite{???} Mapping claims a unique capability to represent the real, objectively
+and diagrammatically, but also requires that world to remain largely
+static, at least on the order of how long it takes to update the map
+for a particular region. The necessary level of continual mapping is a massive task if the
+vehicles must be usable everywhere. The United States alone contains almost
+8.5 million road miles\footnote{Data as of 2008,
+  http://blog.cubitplanning.com/2010/02/road-miles-by-state/\cite{???}},
+and it took years for Google Streetview to acquire the level of
+coverage it currently has. The utopian discourse of driverless cars
+implicitly suggests that such vehicles will be available everywhere,
+and are the solution to nationwide transit problems. But widespread
+egalitarian access to maps-based devices depends upon a rapid,
+widespread mapping initiative.
+
+The seemingly universalizing forces of maps and computer programming
+have a tendency to help hide issues of geographical and cultural
+specificity, which are rendered invisible in the utopian narrative.
+But though engineering practice holds that these issues are
+conquerable, they should be anything but invisible. Programmed devices
+must must know about speed limits, about traffic
 lights, about rules of the road that were never designed for
-autonomous systems. These devices must be molded to us, both to our
-caprices and to our longstanding, ingrained laws and habits. They must
+autonomous systems. These devices must respond to human caprices and
+be adapted to longstanding, ingrained laws and habits. They must
 include historical knowledge, rooted in the legal and social histories
 of roadways, which may differ between cities and states, and certainly
-between countries across the world.
-
-the necessary level of continual mapping is a massive task if the
-vehicles must be usable everywhere. More likely, certain areas will be
-mapped and restricted, or separate divided public rapid transit
-systems will operate on roads that can be carefully monitored.i While
-Mountain View, California may be mapped early, rural West Virginia or
-Northern Maine may not be mapped as soon or as frequently.
-Inequalities may be increased if routes frequented by upper-middle
-class professional commuters, most likely to own new autonomous cars,
-are mapped first, while roads around low-income communities are
-ignored. Local customs and behaviors differ, and even if maps are
+between countries across the world. Local customs and behaviors differ, and even if maps are
 available, the same vehicle programming may not work for Los Angeles,
 Boston, and the rural Midwest, let alone Singapore, Mumbai or Cairo.
 The map, for all of its objective standardization, still represents
 real places subject to cultural histories and vulnerable to
-socio-economic dynamics. 
+socio-economic dynamics. These social and regional issues are often
+ignored in the driverless vehicle narrative, but nevertheless stand to
+be critical to the manner in which these technologies could come to
+enter everyday life.
 
 
 
@@ -942,3 +973,6 @@ direct representations of internal system information.
 %% where they matter to this type of vehicle)
 >>pull from my paper? but really, this needs to be informative not critical
 
+%% 3) (or worked in to each of the previous) current research
+%%--not historical, but actual last-20-years papers about this
+%%--examples of where ideologies bleed through!!!!
